hw13-ver2 - tests and caching